@@ -32,6 +32,8 @@ $_lang['clientconfig.remove_group'] = 'Remove Group';
 $_lang['clientconfig.remove_group.confirm'] = 'Are you sure you want to remove this group? All settings in this group will not be visible for the client until you add them to a different group.';
 $_lang['clientconfig.admin'] = 'Admin';
 $_lang['clientconfig.adminpanel'] = 'Configuration Admin Panel';
+$_lang['clientconfig.cgsetting_err_ns_key'] = 'The Key for the setting is required.';
+$_lang['clientconfig.cgsetting_err_ae_key'] = 'Another key already exists with that key.';
 $_lang['clientconfig.description'] = 'Description';
 $_lang['clientconfig.default'] = 'Default value';
 $_lang['clientconfig.error.noresults'] = 'No items found.';
